hphp/hack/test/typecheck/readonly/vec_special_builtin.php.exp
File "vec_special_builtin.php", line 10, characters 5-19:
This expression is readonly, its members cannot be modified (Parsing[1002])
